Bug 499700 - Titlebar Buttons: "More actions for this window" vs "menu" button
Summary: Titlebar Buttons: "More actions for this window" vs "menu" button
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwindecoration (other bugs)
Version First Reported In: 6.2.5
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-08 21:15 UTC by John Veness
Modified: 2025-05-30 16:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
Titlebar Buttons window (92.88 KB, image/png)
2025-02-08 21:15 UTC, John Veness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2025-02-08 21:15:32 UTC
Created attachment 178085 [details]
Titlebar Buttons window

SUMMARY
In the Window Decorations KCM, Titlebar Buttons section, there is a checkbox labelled "Close windows by double clicking the menu button". However, the "menu" button is now referred to as "More actions for this window", so there's an inconsistency.

STEPS TO REPRODUCE
1. Open System Settings
2. Browse to Colours & Themes > Window Decorations > Configure Titlebar Buttons

OBSERVED RESULT
A checkbox is labelled "Close windows by double clicking the menu button" but seemingly there is no "menu" button available for the titlebar.

EXPECTED RESULT
The checkbox wording and the button wording to match.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250206
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Kernel Version: 6.13.1-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
"Close windows by double clicking the "More actions for this window" button" would obviously be a bit long-winded. So maybe the button called be called the Menu button in the KCM when dragging the buttons around. Presumably things could be done so that "More actions for this window" continues to show as a tooltip when hovering over the button in real windows.
Comment 1 Justin Zobel 2025-02-10 09:14:11 UTC
Confirmed on:
Operating System: Solus 4.7
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.9-312.current (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 4750U with Radeon Graphics
Memory: 29.1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 20Y1001SAU
System Version: ThinkPad P14s Gen 1

The button it is referring to is the 'More actions for this window` button.
Comment 3 John Veness 2025-02-19 18:52:19 UTC
I'll have a go :)

Searching, I think the name of the button is in https://invent.kde.org/plasma/kwin/-/blob/master/src/kcms/decoration/declarative-plugin/buttonsmodel.cpp?ref_type=heads#L56 yes? And changing it there won't change the tooltip if you hover over this button in a real window?

In the Titlebar Buttons KCM, should we actually call the button "Window menu" maybe, rather than just "Menu", seeing as there's also "Application menu"?
Comment 4 Nate Graham 2025-02-19 18:53:57 UTC
Sure, changing the name given to the app icon's menu is another option.

Changing that string you found will indeed change the tooltip text though.
Comment 5 Bug Janitor Service 2025-02-19 22:13:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7203
Comment 6 Nate Graham 2025-05-29 14:22:31 UTC
Git commit 3156e90b35fbeae000186eb92397cdf5c011476b by Nate Graham, on behalf of John Veness.
Committed on 29/05/2025 at 14:22.
Pushed by ngraham into branch 'master'.

Unify name for the "window menu" and its button

This commit unifies the user-visible name for what I've called the
"window menu", and its associated button. This is the button that is
by default in the top-left of a window with the application's icon,
and that shows the menu with Maximize, Minimize, Close etc. when clicked.

At least at some point in the past, this was simply called the "Menu
button" and that text was still in use in some places. More recently the
name for the button (shown in the tooltip and in the Titlebar Buttons KCM)
was changed to "More actions for this window". The keyboard shortcuts KCM
called it "Window Operations Menu". The window behavior KCM called it the
"Actions Menu".

Now let's unify on "window menu".
Related: bug 504807
FIXED-IN: 6.5.0

M  +1    -1    autotests/integration/globalshortcuts_test.cpp
M  +2    -1    doc/kwindecoration/index.docbook
M  +11   -1    doc/windowbehaviour/index.docbook
M  +1    -1    src/kcms/decoration/declarative-plugin/buttonsmodel.cpp
M  +1    -1    src/kcms/decoration/kwindecorationsettings.kcfg
M  +2    -2    src/kcms/decoration/ui/ConfigureTitlebar.qml
M  +3    -3    src/kcms/options/actions.ui
M  +6    -6    src/kcms/options/mouse.ui
M  +6    -6    src/useractions.cpp
M  +1    -2    src/workspace.h

https://invent.kde.org/plasma/kwin/-/commit/3156e90b35fbeae000186eb92397cdf5c011476b
Comment 7 Nate Graham 2025-05-30 16:37:42 UTC
Git commit 111a4128387124f12ab18de353f21be39308d98b by Nate Graham, on behalf of John Veness.
Committed on 30/05/2025 at 16:37.
Pushed by ngraham into branch 'master'.

Change tooltip for window menu button

To match 3156e90b35fbeae000186eb92397cdf5c011476b
in KWin.

M  +1    -1    src/decorationbutton.cpp

https://invent.kde.org/plasma/kdecoration/-/commit/111a4128387124f12ab18de353f21be39308d98b